Fixed navbar collapse

--- a/css/EagleStyle.css
+++ b/css/EagleStyle.css
@@ -5,8 +5,8 @@
 body
 {
     background-color: whitesmoke; 
-    background:  url("/img/EagleProject/AmericanFlag.png") !important;
-    background-size: 100% auto;
+    background: url("../img/EagleProject/AmericanFlag.png") !important;
+    background-size: 100%;
     background-repeat: no-repeat;
     
 }
